tests/valid/lifetime/elision_single_input_return.facet
fn id(r: unrestricted &unrestricted isize) -> unrestricted &unrestricted isize {
    r
}

fn caller<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    (id r)
}
