tests/invalid/lifetime/outlives_constraint_unknown_lifetime.facet
fn bad<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize where 'a: 'missing {
    r
}
